[metadata]
name = pytidbrep
summary = Python TiDB binlog replication
description-file =
    README.rst
author = HashData
author-email = wang@hashdata.cn
home-page = http://www.hashdata.cn/
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    pytidbrep

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[wheel]
universal = 1
